--- a/content/posts/2018-08-04.md
+++ b/content/posts/2018-08-04.md
@@ -12,11 +12,11 @@ We have been hearing about a well known part of Paul's Letter to the Galatians, 
 
 [Gal 5.22-23](https://crosswire.org/study/parallelstudy.jsp?key=Galatians+5%3A22#cv)
 
-The Galatians were [Celts](https://en.wikipedia.org/wiki/Celts), the same people whose descendants still live in Scotland, Ireland, and Wales. What were they doing all the way over in Asia Minor? Well, you can look that up on [Wikipedia](https://en.wikipedia.org/wiki/Celtic_settlement_of_Eastern_Europe). They were a completely different culture to the others living around there -- different language, different beliefs, different hair. They even had a reputation as head hunters. Paul doesn't seem to have been frightened of them though. In fact, he was not afraid to tell them they were fools!
+The Galatians were [Celts](https://en.wikipedia.org/wiki/Celts), the same people whose descendants still live in Scotland, Ireland, and Wales. What were they doing all the way over in Asia Minor? Well, you can look that up on [Wikipedia](https://en.wikipedia.org/wiki/Celtic_settlement_of_Eastern_Europe). They were a completely different culture to the others living around there -- different language, different beliefs, different hair. They even had a reputation as head hunters. Paul doesn't seem to have been frightened of them though. In fact, he was not afraid to tell them they were stupid!
 
-> You foolish Galatians, who has bewitched you, before whose eyes Jesus Christ was publicly portrayed as crucified? This is the only thing I want to find out from you: did you receive the Spirit by the works of the Law, or by hearing with faith? Are you so foolish? Having begun by the Spirit, are you now being perfected by the flesh?
+> You stupid Galatians! Who has cast a spell over you? Wasn't Jesus Christ placarded publicly before your very eyes as someone who had been crucified? There's just one thing I want to find out from you: Did you receive the Spirit as a consequence of doing what the Law requires, or as a consequence of the faith associated with listening? Having begun with the Spirit, are you so stupid as to now be concluding on the merely human plane?
 
-[Gal 3.1-3]
+[Gal 3.1-3](https://crosswire.org/study/parallelstudy.jsp?key=Galatians+3%3A1#cv) (*Under the Southern Cross: The New Testament in Australian English*, translated by Dr Richard K. Moore)
 
 Why would he say that? Well, it was because the Galatians made a great start. They had received God's Spirit by believing in Jesus. But now they were falling into a trap, trying to perfect themselves through the Law. They started off on the right road, the road named "Faith." But now they were in danger of going the wrong way. Someone was trying to convince them to take another road, the road called "Law". The "Law" road was a dead end. Paul would know -- he was a pharisee, someone who knew all about the Law and all of its rules. If he says that following the Law road is the wrong way to go then we should take notice!
 
