tweak message more

--- a/content/posts/2018-08-04.md
+++ b/content/posts/2018-08-04.md
@@ -28,7 +28,7 @@ We are always told to read scripture in context, and this is a really good place
 
 > Now the deeds of the flesh are evident, which are: immorality, impurity, sensuality, idolatry, sorcery, enmities, strife, jealousy, outbursts of anger, disputes, dissensions, factions, envying, drunkenness, carousing, and things like these, of which I forewarn you, just as I have forewarned you, that those who practice such things will not inherit the kingdom of God.
 
-[Gal 5.19-21]
+[Gal 5.19-21](https://crosswire.org/study/parallelstudy.jsp?key=Galatians+5%3A19#cv)
 
 We don't need anyone to teach us how to do these things. People don't need lessons in how to make strife, be jealous, or have angry outbursts -- it comes naturally. If we got paid for the deeds of the flesh then just about everyone would be rich. Here's something else we don't need anyone to teach us -- going down this road leads to destruction.
 
@@ -43,7 +43,7 @@ My Dad used to pray with me when I was little. I remember that he used to say th
 | Pity my simplicity
 | And suffer me to come to thee.
 
-This uses some old language. Being meek is not being forceful, I suppose. Simplicity could even be foolishness. And when it says "suffer me to come to thee," it means "let me come to you." That's a prayer I can pray today. I am simple, stupid if you like. I've got no idea how to walk with God. But Jesus does! I need to stop following this law or that rule and to start letting Jesus guide me, if he will. That is faith, that is belief, that is trust, that is relying on God.
+This uses some old language. I suppose that being meek is not being forceful. Simplicity could even be foolishness. And when it says "suffer me to come to thee," it means "let me come to you." That's a prayer I can pray today. I am simple, stupid if you like. I've got no idea how to walk with God. But Jesus does! I need to stop following this law or that rule and to start letting Jesus guide me, if he will. That is faith, that is belief, that is trust, that is relying on God.
 
 The Greek word translated as *gentleness* when Paul talks about the fruit of the Spirit is [πραότης] (http://www.perseus.tufts.edu/hopper/morph?l=pra_o%2Fths&la=greek). A closely related word is used in Matthew chapter 5, where Jesus says:
 
@@ -55,7 +55,7 @@ That word is [πρᾶος](http://www.perseus.tufts.edu/hopper/morph?l=praus&la=
 
 > (Cogn. with Skt. prīṇā´ti 'love, give pleasure to', Goth.frijon 'love', frijonds 'friend'.)
 
-When you see Paul say that one of the fruits of the Spirit is gentleness, think of a word cloud made up of love, gentleness, meekness, mildness, softness, and friendship. But that's not all. Meekness is not weakness. War horses are described by the same Greek word. This word also contains the ideas of controlled strength and instant response to commands.
+When you see Paul say that one of the fruits of the Spirit is gentleness, think of a word cloud made up of love, gentleness, meekness, mildness, softness, and friendship. But that's not all. Meekness is not weakness. War horses are described by the same Greek word. In addition to the other shades of meaning, this word contains the ideas of controlled strength and instant response to commands.
 
 Psalm 37.11 also says *the meek shall inherit the earth*. From that you can work out that the corresponding Hebrew word is *anav* (עָנָו). This happens to be the word used to describe Moses where it says:
 
