tweak message yet more

--- a/content/posts/2018-08-04.md
+++ b/content/posts/2018-08-04.md
@@ -30,7 +30,7 @@ We are always told to read scripture in context, and this is a really good place
 
 [Gal 5.19-21](https://crosswire.org/study/parallelstudy.jsp?key=Galatians+5%3A19#cv)
 
-We don't need anyone to teach us how to do these things. People don't need lessons in how to make strife, be jealous, or have angry outbursts -- it comes naturally. If we got paid for the deeds of the flesh then just about everyone would be rich. Here's something else we don't need anyone to teach us -- going down this road leads to destruction.
+We don't need anyone to teach us how to do these things. People don't need lessons in how to make strife, be jealous, or have angry outbursts -- it comes naturally. If we got paid for the deeds of the flesh then no one would have to work. However, there's something else we don't need anyone to teach us -- going down this road leads to destruction.
 
 We don't need the rotten fruit of the flesh; we need the good fruit of the Spirit. The way to get the good fruit is by walking up the road called "Faith," not by walking down the highway called "Law."
 
