hopefully last tweak

--- a/content/posts/2018-08-04.md
+++ b/content/posts/2018-08-04.md
@@ -38,10 +38,13 @@ We don't need the rotten fruit of the flesh; we need the good fruit of the Spiri
 
 My Dad used to pray with me when I was little. I remember that he used to say this:
 
-| Gentle Jesus, meek and mild
-| Look upon this little child
-| Pity my simplicity
-| And suffer me to come to thee.
+Gentle Jesus, meek and mild
+
+Look upon this little child
+
+Pity my simplicity
+
+And suffer me to come to thee.
 
 This uses some old language. I suppose that being meek is not being forceful. Simplicity could even be foolishness. And when it says "suffer me to come to thee," it means "let me come to you." That's a prayer I can pray today. I am simple, stupid if you like. I've got no idea how to walk with God. But Jesus does! I need to stop following this law or that rule and to start letting Jesus guide me, if he will. That is faith, that is belief, that is trust, that is relying on God.
 
@@ -71,25 +74,37 @@ To finish off tonight, let's read some more from Matthew's Gospel:
 
 > Many followed him and he cured them all, but warned them not to make him known. This was to fulfil the prophecy of Isaiah:
 
-| Here is my servant whom I have chosen,
-| my beloved, the favourite of my soul.
-| I will endow him with my spirit,
-| and he will proclaim the true faith to the nations.
-| He will not brawl or shout,
-| nor will anyone hear his voice in the streets.
-| He will not break the crushed reed,
-| nor put out the smouldering wick
-| till he has led the truth to victory:
-| in his name the nations will put their hope.
+Here is my servant whom I have chosen,
+
+my beloved, the favourite of my soul.
+
+I will endow him with my spirit,
+
+and he will proclaim the true faith to the nations.
+
+He will not brawl or shout,
+
+nor will anyone hear his voice in the streets.
+
+He will not break the crushed reed,
+
+nor put out the smouldering wick
+
+till he has led the truth to victory:
+
+in his name the nations will put their hope.
 
 [Matt 12.15-21](https://crosswire.org/study/parallelstudy.jsp?key=Matthew+12%3A15#cv) (Jerusalem Bible)
 
 And so we come back to that little prayer:
 
-| Gentle Jesus, meek and mild
-| Look upon this little child
-| Pity my simplicity
-| And suffer me to come to thee.
+Gentle Jesus, meek and mild
+
+Look upon this little child
+
+Pity my simplicity
+
+And suffer me to come to thee.
 
 We approach Jesus by learning to trust him. He is gentle, and lets us come to him. Do you feel like a crushed reed or a smouldering wick? Well, he won't break you and he won't put you out. Go to him with the same attitude as Moses. We have nothing that merits his good will. All we have is brokenness and strife. But, as he lets us draw near, our faces begin to shine and we bear that special, gentle, fruit.
 
