--- a/content/posts/2013-06-15.md
+++ b/content/posts/2013-06-15.md
@@ -1,6 +1,6 @@
 ---
-title: "Luke 4.18-19: Jesus Christ's Mission"
-date: 2018-06-05
+title: "Jesus Christ's Mission"
+date: 2013-06-15
 bibliography: messages.yaml
 ---
 
@@ -8,46 +8,47 @@ bibliography: messages.yaml
 
 The Gospel of Luke tells us that Jesus's public work began after his baptism by John the Baptist in the Jordan River. People thought that John the Baptist might be the Messiah, the promised saviour of Israel. So John told them this:
 
-> I baptize by immersing you in water. However, someone who is stronger than I am is coming; I am not worthy even to release the straps on his sandals. He will baptize you by immersing you in the Holy Spirit and in fire. [Luke 3.16. New Testament quotations are from Richard K. Moore's new translation, *Under the Southern Cross: The New Testament in Australian English*, abbreviated USC from this point forwards.]
+> I baptize by immersing you in water. However, someone who is stronger than I am is coming; I am not worthy even to release the straps on his sandals. He will baptize you by immersing you in the Holy Spirit and in fire.^[Luke 3.16. New Testament quotations are from Richard K. Moore's new translation, *Under the Southern Cross: The New Testament in Australian English*, abbreviated USC from this point forwards.]
 
 Here is what happened when Jesus was baptized:
 
-> At the time when all the people were undergoing baptismal immersion, Jesus also was immersed. While he was praying, the sky opened up and the Holy Spirit descended on him in bodily form resembling a dove, and there was a voice from the sky, ‘You are my Son, whom I love dearly; I am delighted with you.’ [Luke 3.21-2 USC]
+> At the time when all the people were undergoing baptismal immersion, Jesus also was immersed. While he was praying, the sky opened up and the Holy Spirit descended on him in bodily form resembling a dove, and there was a voice from the sky, ‘You are my Son, whom I love dearly; I am delighted with you.’^[Luke 3.21-2 USC]
 
 Jesus then went into the desert under the guidance of the Holy Spirit. He was there for forty days and, while there, the devil tried to derail him with various temptations: self-sufficiency, power, and glory. But Jesus resisted the devil.
 
 Straight after that, Jesus began his public work. And the first thing he did was to announce his mission. Here is how Luke puts it:
 
-> Then, in the power of the Spirit, Jesus returned to Galilee and a report about him went throughout the surrounding countryside. He taught in their synagogues and everyone held him in high regard. He came to Nazareth, where he had been brought up, and, following his usual practice, on the Sabbath Day he went to the synagogue. When he stood up to read, the scroll of the prophet Isaiah was handed to him. After unrolling the scroll, he found the place where it is recorded: The Lord’s Spirit is upon me, because he has anointed me; He has sent me to announce good news to the poor, to proclaim release to prisoners and recovery of sight to the blind, to set the downtrodden free, to proclaim a year approved by the Lord. He then rolled up the scroll, handed it back to the attendant, and sat down. The eyes of everyone in the synagogue were fixed on him. He began by saying to them, ‘Today this Scripture passage you have heard has been fulfilled.’ [Luke 4.14-21 USC]
+> Then, in the power of the Spirit, Jesus returned to Galilee and a report about him went throughout the surrounding countryside. He taught in their synagogues and everyone held him in high regard. He came to Nazareth, where he had been brought up, and, following his usual practice, on the Sabbath Day he went to the synagogue. When he stood up to read, the scroll of the prophet Isaiah was handed to him. After unrolling the scroll, he found the place where it is recorded: The Lord’s Spirit is upon me, because he has anointed me; He has sent me to announce good news to the poor, to proclaim release to prisoners and recovery of sight to the blind, to set the downtrodden free, to proclaim a year approved by the Lord. He then rolled up the scroll, handed it back to the attendant, and sat down. The eyes of everyone in the synagogue were fixed on him. He began by saying to them, ‘Today this Scripture passage you have heard has been fulfilled.’^[Luke 4.14-21 USC]
 
 # A close look
 
-Here is where our saviour announces his mission so let's take a close look at what he says. We don't know whether Jesus was reading a Hebrew or Greek version but we do know that Luke gave it to us in Greek:
+Here is where our saviour announces his mission so let's take a close look at what he says. We don't know whether Jesus was reading a Hebrew or Greek version but we do know that Luke gave it to us in Greek^[This is the Greek text of Luke 4.18-19 found in Robinson and Pierpont's *New Testament in the Original Greek: Byzantine Textform*. Other editions of the Greek New Testament drop the phrase ιασασθαι τους συντετριμμενους την καρδιαν. Keeping it preserves something called chiastic structure.]:
 
-<pre>
-* πνευμα κυριου επ εμε ου εινεκεν εχρισεν με ευαγγελισασθαι πτωχοις
-** απεσταλκεν με ιασασθαι τους συντετριμμενους την καρδιαν
-*** κηρυξαι αιχμαλωτοις αφεσιν και τυφλοις αναβλεψιν
-** αποστειλαι τεθραυσμενους εν αφεσει
-* κηρυξαι ενιαυτον κυριου δεκτον
-</pre>
+> a. πνευμα κυριου επ εμε ου εινεκεν εχρισεν με ευαγγελισασθαι πτωχοις
 
-[This is the Greek text of Luke 4.18-19 found in Robinson and Pierpont's *New Testament in the Original Greek: Byzantine Textform*. Other editions of the Greek New Testament drop the phrase ιασασθαι τους συντετριμμενους την καρδιαν. Keeping it preserves something called chiastic structure.]
+> b. απεσταλκεν με ιασασθαι τους συντετριμμενους την καρδιαν
+
+> c. κηρυξαι αιχμαλωτοις αφεσιν και τυφλοις αναβλεψιν
+
+> b. αποστειλαι τεθραυσμενους εν αφεσει
+
+> a. κηρυξαι ενιαυτον κυριου δεκτον
 
 Now for a translation:
 
-<pre>
-* The Lord's Spirit is upon me because he anointed me to evangelize the poor
-** He has sent me to heal those with crushed hearts
-*** to proclaim liberty to the prisoners and recovered sight to the blind
-** to send out the shattered with forgiveness
-* to proclaim the Lord's acceptable year.
-</pre>
+> a. The Lord's Spirit is upon me because he anointed me to evangelize the poor
 
+> b. He has sent me to heal those with crushed hearts
 
-This announcement can be arranged into five parts so that there are parallels between the first and last phrase, as well as between the second and second last phrase. This is called chiastic structure and happens quite often in the Bible. Good news to the poor and the acceptable year of the Lord are related, as are curing the broken-hearted and sending out the shattered with forgiveness. This kind of structure emphasizes the importance of the central part, to proclaim liberty to the prisoners and recovered sight to the blind.
+> c. to proclaim liberty to the prisoners and recovered sight to the blind
 
-There is much here and more that is lost in translation. [Anointing](https://en.wikipedia.org/wiki/Anointing) signifies appointment by God. It also signifies the gift of God's Spirit. (Christ means anointed; it is the Greek equivalent of Messiah.) The poor have no means of support and no place of their own. All they can do is beg or sell themselves. The word translated as proclaim also means to issue a command and to cry out. The word translated as [prisoners](http://www.perseus.tufts.edu/hopper/morph?l=%CE%B1%CE%B9%CF%87%CE%BC%CE%B1%CE%BB%CF%89%CF%84%CE%BF%CE%B9%CF%82&la=greek#lexicon) can mean people taken captive through violence and frequently refers to women. Finally, the word translated as liberty, which occurs in the third and fourth lines, means freedom, release, and forgiveness. Cry freedom to the captives, release to those who have been taken by force!
+> b. to send out the shattered with forgiveness
+
+> a. to proclaim the Lord's acceptable year.
+
+This announcement can be arranged into five parts so that there are parallels between the first and last phrase (a-a), as well as between the second and second last phrase (b-b). This is called chiastic structure and happens quite often in the Bible. Good news to the poor and the acceptable year of the Lord are related, as are curing the broken-hearted and sending out the shattered with forgiveness. This kind of structure emphasizes the importance of the central part ( c ), to proclaim liberty to the prisoners and recovered sight to the blind.
+
+There is much here and more that is lost in translation. [Anointing](https://en.wikipedia.org/wiki/Anointing) signifies appointment by God. It also signifies the gift of God's Spirit. (*Christ* means anointed; it is the Greek equivalent of *Messiah*.) The poor have no means of support and no place of their own. All they can do is beg or sell themselves. The word translated as *proclaim* also means to issue a command and to cry out. The word translated as *prisoners* can mean people taken captive through violence and frequently refers to women.^[See the entry for [αιχμαλωτοις](http://www.perseus.tufts.edu/hopper/morph?l=%CE%B1%CE%B9%CF%87%CE%BC%CE%B1%CE%BB%CF%89%CF%84%CE%BF%CE%B9%CF%82&la=greek#lexicon) at Perseus.] Finally, the word translated as *liberty*, which occurs in the third and fourth lines, means freedom, release, and forgiveness. *Cry freedom to the captives, release to those who have been taken by force!*
 
 Christ's apostles are ambassadors of God's kingdom, sent out to proclaim the acceptable year of the Lord. Christ the healer sends out the shattered who have been restored. Remember Peter? He was crushed but Christ restored him then sent him out with the Gospel of forgiveness.
 
@@ -59,20 +60,23 @@ There are both spiritual and practical aspects to Christ's mission. Concerning t
 
 Charles Wesley knew this and put it in a hymn he wrote after his conversion to Christ in 1738. The hymn is “And Can It Be?” and here is its fourth verse:
 
-<pre>
-Long my imprisoned spirit lay
-Fast bound in sin and nature's night;
-Thine eye diffused a quick'ning ray,
-I woke, the dungeon flamed with light;
-My chains fell off, my heart was free;
-I rose, went forth and followed Thee
-</pre>
+> Long my imprisoned spirit lay
 
-Jesus Christ is good news for the poor in spirit, not bad news. He cures the broken-hearted then sends them out as God's ambassadors. He restores the shattered and sends them out to restore; the forgiven are sent out with the Gospel of forgiveness; Christ sets people free so that they can free others. Jesus Christ is able to set your spirit free no matter what is binding you. He is able to bring light into your spirit no matter how dark your world has become. He is the evangelist of the world, telling us that we are in the acceptable year of the Lord, the time of restoration.
+> Fast bound in sin and nature's night;
+
+> Thine eye diffused a quick'ning ray,
+
+> I woke, the dungeon flamed with light;
+
+> My chains fell off, my heart was free;
+
+> I rose, went forth and followed Thee.
+
+Jesus Christ is *good* news for the poor in spirit, not bad news. He cures the broken-hearted then sends them out as God's ambassadors. He restores the shattered and sends them out to restore; the forgiven are sent out with the Gospel of forgiveness; Christ sets people free so that they can free others. Jesus Christ is able to set your spirit free no matter what is binding you. He is able to bring light into your spirit no matter how dark your world has become. He is the evangelist of the world, telling us that we are in the acceptable year of the Lord, the time of restoration.
 
 # Practical dimensions of Christ's mission
 
-Brothers and sisters, God cares for our bodies as well as our spirits. Christ's mission has a practical dimension. He showed this in many ways during his earthly ministry. He healed all kinds of diseases, even restoring sight to a man born blind. The Good News has been spread through people who told others about it. The apostles and their immediate circle wrote down what is now the New Testament and generations of Christians copied those books by hand so that we could have them today. Christ's people have continued his mission to care for the poor and sick. Early Christians established hospitals as early as the fourth century: Saint Ephraem of Syria provided three hundred beds to care for plague victims while Saint Basil the Great used his inheritance to construct a hospital with buildings for patients, nurses, and doctors as well as workshops and industrial schools. (See the New Advent Encyclopedia's article on [hospitals](http://newadvent.org/cathen/07480a.htm).) Christians established places to care for travellers, the sick, and the poor. Hospitality is central to the message of Christ.
+Brothers and sisters, God cares for our bodies as well as our spirits. Christ's mission has a practical dimension. He showed this in many ways during his earthly ministry. He healed all kinds of diseases, even restoring sight to a man born blind. The Good News has been spread through people who told others about it. The apostles and their immediate circle wrote down what is now the New Testament and generations of Christians copied those books by hand so that we could have them today. Christ's people have continued his mission to care for the poor and sick. Early Christians established hospitals as early as the fourth century: Saint Ephraem of Syria provided three hundred beds to care for plague victims while Saint Basil the Great used his inheritance to construct a hospital with buildings for patients, nurses, and doctors as well as workshops and industrial schools.^[See the New Advent Encyclopedia's article on [hospitals](http://newadvent.org/cathen/07480a.htm).] Christians established places to care for travellers, the sick, and the poor. Hospitality is central to the message of Christ.
 
 Christians began to care for abandoned children as early as the first century. Christ's Good News of loving others as yourself compelled them to care for children who had been “exposed” -- that is, left outside to die a slow and horrible death or, perhaps worse, to be picked up by slavers and doomed to a life of utter misery. It was quite normal for parents in the world of that time to expose babies, often unwanted girls. Christians put an end to that.
 
@@ -125,6 +129,4 @@ Even those whom I have afflicted.
 > “I will make the lame a remnant
 And the outcasts a strong nation,
 And the LORD will reign over them in Mount Zion
-From now on and forever.”
-
-[Micah 4.1-7, NASB]
+From now on and forever.”^[Micah 4.1-7, NASB]
