--- a/content/posts/2018-01-27.md
+++ b/content/posts/2018-01-27.md
@@ -1,9 +1,9 @@
 ---
-title: "Philippians 3"
+title: "One thing worth pursuing"
 date: 2018-01-27
 ---
 
-# Introduction
+# A letter from prison
 
 We've been going through Paul's Letter to the Philippians and today we are up to chapter three. Paul wrote this letter from prison, and he seems to have doubts about getting out alive: *To me life means Christ and death means gain* [Phil 1.21](https://crosswire.org/study/parallelstudy.jsp?key=Philippians+1%3A21#cv).
 
