--- a/content/posts/2018-04-07.md
+++ b/content/posts/2018-04-07.md
@@ -1,5 +1,5 @@
 ---
-title: "Mark 16.1-8"
+title: "Astonished"
 date: 2018-04-07
 bibliography: messages.yaml
 ---
@@ -62,6 +62,6 @@ Once the women got over their shock they did go and tell the others. One person 
 
 # Conclusion
 
-What can we say about Mark's account of the resurrection? It has the feel of an eye witness account. It says things that you wouldn't write if you were making it all up. Why would you choose three unknown women? Why would you choose an unknown man, and a young, harmless one? Why would you say that the women ran away scared and ecstatic at the same time? Why would you say that they didn't say anything to anyone because they were afraid? The answer is, you wouldn't, unless it really happened that way.
+What can we say about Mark's account of the resurrection? It has the feel of an eye witness account. It says things that you wouldn't write if you were making it all up. Why would you choose three unknown women? Why would you choose an unknown man, and a young, harmless one? Why would you say that the women ran away scared and ecstatic at the same time? Why would you say that they didn't say anything to anyone because they were afraid? I think the answer is that you wouldn't, unless it really happened that way.
 
 <!--# References-->
