--- a/content/posts/2018-06-09.md
+++ b/content/posts/2018-06-09.md
@@ -4,7 +4,7 @@ date: 2018-06-09
 bibliography: messages.yaml
 ---
 
-# Introduction
+# A general letter
 
 The First Letter of Peter is one of the seven General Letters in the New Testament: James; First and Second Peter; First, Second, and Third John; and Jude. These letters are called "General" because they are addressed to general groups of people instead of particular ones. Here's an example of a general letter:
 
@@ -30,7 +30,7 @@ Why did Jesus call Simon "rock"? One time Jesus asked his disciples who people t
 
 > And they said, “Some say John the Baptist, others, Elijah, and others, Jeremiah, or one of the prophets.” He said to them, “But who do you say that I am?” Simon Peter answered, “You are the Christ, the Son of the living God.” And Jesus said to him, “Blessed are you, Simon Barjona, because flesh and blood did not reveal this to you, but My Father who is in heaven. I also say to you that you are Peter, and upon this rock I will build My church; and the gates of Hades will not overpower it.” [Matt 16.16-18]
 
-So the rock of Peter is what God showed him, that Jesus is the Son of God, the Christ, the Messiah. (If you don't already know, "Christ" is Greek and "Messiah" is Aramaic. They mean the same thing, which is "annointed". To annoint someone is to pour oil upon someone. Ancient rulers were annointed, not crowned. To say Jesus is the Christ or Messiah is to say that he is the one who God has made the ruler of all things.)
+So the rock of Peter is what God showed him, that Jesus is the Son of God, the Christ, the Messiah. (If you don't already know, "Christ" is Greek and "Messiah" is Aramaic. They mean the same thing, which is "annointed". Annointing means to pour oil upon someone. Ancient rulers were annointed, not crowned. To say Jesus is the Christ or Messiah is to say that he is the one who God has made the ruler of all things.)
 
 # Who is it for?
 
@@ -56,6 +56,6 @@ There's another thing many of you have in common with Peter. He had to work in a
 
 # Conclusion
 
-We could learn something from Peter: Jesus gives every generation the job of taking the Good News to a world that needs it but doesn't know it. Jesus makes his own choices about who is given what job and where he sends them to do it. Sometimes following Jesus means uprooting our family and going to a far off place where they speak a strange language and have funny habits. Sometimes we are sent to do a job that we don't think we are well equipped to do. Sometimes Christ's Spirit directs us to do something that doesn't seem to make a lot of sense at the time. However, there is always a blessing in following the Spirit. Jesus is the one in command. He is the one who gives us a job to do -- whether great or small. He is the one who sends us this way or that in order to do it. Our part is to do what he gives us: to take the Good News to the nations he has sent us to. Jesus is happy for us to be part of his mission. Doing our part might mean getting help with things we are not so good at ourselves. If you need help taking the Good News to the world, you can be sure that Jesus will supply helpers when you need them. Remember that Jesus says, "If you ask for anything in my name, I will do it."
+We could learn something from Peter: Jesus gives every generation the job of taking the Good News to a world that needs it but doesn't know it. Jesus makes his own choices about who is given what job and where they are sent to do it. Sometimes following Jesus means uprooting our family and going to a far off place where they speak a strange language and have funny habits. Sometimes we are sent to do a job that we don't think we are well equipped to do. Sometimes Christ's Spirit directs us to do something that doesn't seem to make a lot of sense at the time. However, there is always a blessing in following the Spirit. Jesus is the one in command. He is the one who gives us a job to do -- whether great or small. He is the one who sends us this way or that in order to do it. Our part is to do what he gives us: to take the Good News to the nations he has sent us to. Jesus is happy for us to be part of his mission. Doing our part might mean getting help with things we are not so good at ourselves. If you need help taking the Good News to the world, you can be sure that Jesus will supply helpers when you need them. Remember that Jesus says, "If you ask for anything in my name, I will do it."
 
 <!--# References-->
