--- a/content/posts/2018-10-13.md
+++ b/content/posts/2018-10-13.md
@@ -1,5 +1,5 @@
 ---
-title: "A happy gospeller"
+title: "This little light"
 date: '2018-10-13'
 ---
 
@@ -9,27 +9,31 @@ Christians are meant to be evangelists. That means we are meant to tell people t
 
 If you are like me then you have trouble being an evangelist. I find evangelism hard, like going to the dentist. I know I should do it but I don't want to. I'd rather not go and suffer for fear of what will happen if I do go.
 
-Tonight we will hear about a surprising evangelist and perhaps learn from her how to be a happy gospeller.
+Tonight we will hear about a surprising evangelist and perhaps learn from her how to be a happy gospeller. You can read about it in chapter four of John's Gospel. I will be using Richard Moore's translation, *Under the Southern Cross* (USC) for quotations from John's Gospel.^[Richard K. Moore, *Under the Southern Cross: The New Testament in Australian English* (WestBow Press, 2014).]
 
 # Going through Samaria
 
-This story starts with Jesus being in unfriendly territory. He had been near the Jordan River but decided he had better get out of there and go back to where he lived, which was a long way off in Galilee. The reason he had to go is that a  religious group called the Pharisees found out he was baptizing more people than John the Baptist. The Pharisees were already mad at John the Baptist but now here was Jesus getting even more followers. In fact Jesus wasn't baptizing anyone. His followers, who we call *disciples*, were the ones doing the baptizing. Some of Jesus' followers were originally followers of John the Baptist, so they knew a thing or two about baptizing people as a symbol of repentance.
+This story starts with Jesus in unfriendly territory. He had been near the Jordan River but decided he had better get out of there and go back to where he lived, which was a long way off in Galilee. The reason he had to go is that a religious group called the Pharisees found out he was baptizing more people than John the Baptist. The Pharisees were already mad at John the Baptist but now here was Jesus getting even more followers. In fact Jesus wasn't baptizing anyone. His followers, who we call *disciples*, were the ones doing the baptizing. Some of Jesus' followers were originally followers of John the Baptist, so they knew a thing or two about baptizing people as a symbol of repentance.
 
-To get back home, Jesus had to walk through Samaria, which is where the Samaritans lived. Jesus is a Jew, a descendant of Abraham. For a Jew, the right place to worship is Jerusalem. Samaritans are also descendants of Abraham, but for them the right place to worship is not Jerusalem but a place called [Mount Gerizim](https://en.wikipedia.org/wiki/Mount_Gerizim), a place where the [Samaritan religion](https://en.wikipedia.org/wiki/Samaritanism) is still practised to this day.
+To get back home, Jesus had to go through Samaria, which is where the Samaritans lived. Jesus is a Jew, a descendant of Abraham. For a Jew, the right place to worship is Jerusalem. Samaritans are also descendants of Abraham, but for them the right place to worship is not Jerusalem but a place called [Mount Gerizim](https://en.wikipedia.org/wiki/Mount_Gerizim), a place where the [Samaritan religion](https://en.wikipedia.org/wiki/Samaritanism) is still practised to this day. (There are only 750 Samaritans left.)
 
-Back then, Jews and Samaritans did not get along. To know why they didn't get along we need to know a bit of history, which you can read about in [2 Kings 17.24-41](http://crosswire.org/study/parallelstudy.jsp?key=II+Kings+17%3A24#cv). Assyria invaded the northern part of Israel called Samaria and it fell in 721 BC. Until then its people practised the Jewish religion. The Assyrian king brought in people from five outside nations. A bit later those people started getting eaten by lions. The king of Assyria then thought he had bettee send in a Hebrew priest to teach them how to worship the God of Israel. However, those people kept their old gods too, which is breaking the first commandment God gave to Moses:
+Back then, Jews and Samaritans did not get along. To know why they didn't get along we need to know a bit of history, which you can read about in [2 Kings 17.24-41](http://crosswire.org/study/parallelstudy.jsp?key=II+Kings+17%3A24#cv). Assyria invaded the northern part of Israel called Samaria and it fell in 721 BC. Until then its people practised the Jewish religion. The Assyrian king brought in people from five outside nations. A bit later those people started getting eaten by lions so the king of Assyria thought he had better send in a Hebrew priest to teach them how to worship the God of Israel. However, those people kept their old gods too, which is breaking the first of the ten commandments God gave to Moses:
 
-> You shall have no gods except me [Exodus 20.3](http://crosswire.org/study/parallelstudy.jsp?key=Exodus+20%3A3#cv)
+> You shall have no gods except me [[Exodus 20.3](http://crosswire.org/study/parallelstudy.jsp?key=Exodus+20%3A3#cv)]
 
 Given this history, a typical Jewish person looked on Samaritans as heretics (because they worshipped in the wrong place) and impostors (because they had questionable ancestry). It looks like some of Jesus' followers didn't like Samaritans either. In Luke's Gospel we are told about one time when James and John, two of Jesus' first followers, wanted God to burn a Samaritan village.^[See [Luke 9.51-56](http://crosswire.org/study/parallelstudy.jsp?key=Luke+9%3A51#cv).]
 
-# Give me a drink
+# Let me have a drink
 
-Jesus is sitting down by a well when a Samaritan lady comes up. It is lunch time (midday), so it's hot. Jesus says, "Give me a drink."
+Jesus is sitting down by a well when a Samaritan lady comes up. Let's call her Photina. That's what the Eastern Orthodox church says her name is. It means *little light*.
 
-Now, what's wrong with this picture? Give me some ideas.
+We are told that it is the sixth hour. They counted hours from when the sun came up so we would say it was lunch time, the hottest time of the day. Jesus says,
 
-Here are a few of the things that are wrong:
+> Let me have a drink.
+
+Now, what's wrong with this picture? What do you think?
+
+Here are a few things that are wrong:
 
 1. Jesus' followers aren't there.
 
@@ -37,18 +41,88 @@ Here are a few of the things that are wrong:
 
 3. Jesus talks to an unaccompanied Samaritan woman.
 
-Well John tells us why the disciples aren't there -- they've gone into town to get lunch. But that doesn't explain why Jesus is talking to an unaccompanied woman. This would raise a few eyebrows. And it doesn't say why Jesus starts the conversation, and why he starts a conversation with a **Samaritan woman**. This would raise all of the eyebrows that are not already raised. It is just not done. Jesus is breaking a lot of basic rules that his followers would expect him to follow.
+Well John tells us why the disciples aren't there -- they've gone into town to get lunch. But that doesn't explain why Jesus is talking to an unaccompanied woman. This would raise a few eyebrows. And it doesn't say why Jesus starts the conversation, and why he starts a conversation with a **Samaritan woman**. This would raise all of the eyebrows that are not already raised. It is just not done. Jesus is breaking a lot of basic rules that his followers would expect him to keep. It's a good thing that they weren't there.
 
-There is something else as well. She is getting water at lunch time. The right time to get water is *not* lunch time. Anyone who walks a long way to get water then carry it all the way back again knows that lunch time is the wrong time to get water.^[See e.g. [Gen 24.11](http://crosswire.org/study/parallelstudy.jsp?key=Genesis+24%3A11#cv).] One possible explanation for her going to get water at lunch time is that she was ostracized by her own people. So here she is, a woman, a Samaritan woman, a Samaritan woman whose own people reject her, and some Jewish guy tries to start up a conversation.
+There is something else as well. She is getting water at lunch time. Anyone who walks a long way to get water then carries it all the way back again knows that lunch time is the wrong time to get water because it is the hottest part of the day. ^[See e.g. [Gen 24.11](http://crosswire.org/study/parallelstudy.jsp?key=Genesis+24%3A11#cv).] This is a hint that the woman at the well is an outcast among her own people, an outcast of outcasts. And now some Jewish guy tries to start up a conversation. What does **he** want?
 
-knows
+# Where's your bucket?
 
-# ...
+After Jesus says "Let me have a drink", she says,
 
-To be an evangelist I need to:
+> How is it that you, a Jewish man, are asking for a drink from me, a Samaritan Woman?
 
-* have the story to tell
+Then Jesus says:
 
-* have someone I want to tell
+> If only you knew about God's gift and who it is who's saying to you, "Let me have a drink," you would have asked him, and he would have given you running water.
 
-* have someone that wants to listen.
+Most English translations say *living water* here, but *running water* is a great translation and gets at what Jesus means. His water is spring water: it doesn't go dry, it's not stagnant, and it's not poisonous like well water can be, especially if your enemies block the well or poison it.
+
+At this point Photina says:
+
+> Sir, not only do you not have a bucket, but the well is deep; so where are you going to get this running water from?
+
+This indicates that Photina is practical. It could also mean she has a sense of humour and is making fun of the Jewish stranger when she asks about where he's going to get running water. But there is something else. She calls him κυριε, which we usually translate as *Lord* or *Master*. Perhaps she uses this respectful title because he has started to talk about God. In any case, she decides to assess him and his claims about running water.
+
+> Surely you aren't greater than our ancestor Jacob, are you? It was he who gave us the well, and he used to drink from it himself, as did his sons and his livestock.
+
+Photina tells the stranger that this is not any old well, but it is Jacob's well and is an important part of Israel's history. (As you know, Israel is the name that God gave to Jacob after wrestling with him and putting his hip out of joint.) Her words indicate that she knows the stranger is talking about something besides ordinary water, but she wants to know whether there is any reason why she should keep listening.
+
+# Where's your husband?
+
+Here is what the stranger said when Photina asked him whether he is greater than Jacob:
+
+> Everyone who has a drink of this water will feel thirsty again, but anyone who has a drink of the water I will give them will never feel thirsty again; instead, the water I will give them will become a spring of water bubbling up to eternal life.
+
+At this point Photina says what could either be a joke or an exhausted plea for a way out of having to come to the well in the middle of the day:
+
+> Sir, let me have have this water, so that I won't get thirsty or need to come here to draw water.
+
+Again, Photina's practical outlook is evident. Again, she uses the respectful title. And now Jesus tells her to do something that changes everything. He says,
+
+> Go and get your husband, then come back here.
+
+She says,
+
+> I haven't got a husband."
+
+Then he says,
+
+> You have had five men and the man you have now isn't your husband either; what you have said is quite true."
+
+No doubt what he said shocked her. This stranger knows all about her. How can that be?
+
+# True worship
+
+Photina's belief concerning the stranger is changing. Now she addresses him with even greater respect:
+
+> Sir, I can see that you're a prophet. Our ancestors used to worship on this mountain, but you Jews claim that Jerusalem is the place where worship must take place.^[She says "used to worship" because someone called [John Hyrcanus](https://en.wikipedia.org/wiki/John_Hyrcanus) had destroyed the Samaritan temple about 150 years earlier.]
+
+In reply, Jesus says this:
+
+> Believe me, lady, a time is coming when you will worship the Father neither on this mountain nor in Jerusalem. You Samaritans worship what you don't understand; we worship what we do know about, since salvation originated with the Jews. However, the time is coming, indeed, it's already come, when the real worshippers will worship the Father in spirit and in reality, for the Father is on the lookout for such people to worship him. God is spirit, and those who worship him must worship him in spirit and in reality.
+
+I don't know why, but when Photina hears this she starts to talk about the Messiah, that great prophet who Moses told the children of Israel to expect:
+
+> I'm well aware that the Messiah is to come; when he comes he will explain everything to us.
+
+And then this Jewish prophet says,
+
+> That's who I am, the very person speaking to you.
+
+# The universal saviour
+
+This encounter started with a Jewish traveller asking a Samaritan woman for a drink. It ends with Jesus doing something that I don't think happens anywhere else in the New Testament: he tells someone directly that he is the Messiah. Everything about this encounter is surprising. On one side is the God-man, on the other is an outcast of outcasts. They start to talk and have a conversation in spite of the usual prejudices. The conversation turns to things divine, and the God-man says that God seeks those who truly seek him, Spirit seeking spirit. During the conversation the woman has a growing realisation of who she is speaking to: first he's a stranger, then he's a devout man, then he's a prophet. Finally she has an incredible thought: could this actually be the Messiah?
+
+Johns tells us that she went to the town and said,
+
+> Come and see a person who's told me everything I've ever done. Surely he couldn't be the Messiah, could he?
+
+Those people did come and see Jesus, and invited him to stay with them. (Imagine that -- a Samaritan town invites a Jewish preacher to stay.) What's more, they ended up believing that he is the Messiah -- some because of what the woman said and others because they heard him speak themselves. Here is how John puts it:
+
+> They said to the woman, 'We no longer have faith only on the basis of what you've had to say, for now we've listened to him ourselves and know that he really is the universal Saviour.'
+
+This woman is the first evangelist to non-Jews. She becomes an evangelist because she encounters the prophet. She has a growing realisation of who he is. She knows he is a prophet because he knows everything about her. She even thinks that he could be the Messiah.
+
+The woman at the well became a gospeller because she encountered Jesus. He gave her something that bubbles up inside her like a spring. It's like running water. It doesn't care for stagnant arguments like "Where's the right hill to worship?" Instead, it draws people to the God who is spirit, who seeks those who seek him in spirit and in truth. Jesus is not only the prophet -- he is the universal Saviour.
+
+Photina is honoured as a saint by the Eastern Orthodox Church, which calls her "equal to the apostles." Ancient tradition says that she was so renowned that she came to the attention of Nero. Coming to the attention of a dictator is usually a bad thing, and her case is no exception. After being tortured she was killed by being thrown down a dry well. So she continues to tell us about the prophet who knows everything she's done and offers the free gift of running water that bubbles up to eternal life.
