--- a/content/posts/2018-10-13.md
+++ b/content/posts/2018-10-13.md
@@ -125,4 +125,4 @@ This woman is the first evangelist to non-Jews. She becomes an evangelist becaus
 
 The woman at the well became a gospeller because she encountered Jesus. He gave her something that bubbles up inside her like a spring. It's like running water. It doesn't care for stagnant arguments like "Where's the right hill to worship?" Instead, it draws people to the God who is spirit, who seeks those who seek him in spirit and in truth. Jesus is not only the prophet -- he is the universal Saviour.
 
-Photina is honoured as a saint by the Eastern Orthodox Church, which calls her "equal to the apostles." Ancient tradition says that she was so renowned that she came to the attention of Nero. Coming to the attention of a dictator is usually a bad thing, and her case is no exception. After being tortured she was killed by being thrown down a dry well. So she continues to tell us about the prophet who knows everything she's done and offers the free gift of running water that bubbles up to eternal life.
+Photina is honoured as a saint by the Eastern Orthodox Church, which calls her "equal to the apostles." Ancient tradition says that she was so renowned that she came to the attention of Nero. Coming to the attention of a dictator is usually a bad thing, and her case is no exception. After being tortured she was killed by being thrown down a dry well. So she continues to tell us the good news about the prophet who knows everything we've done and still offers the free gift of running water that bubbles up to eternal life.
